--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -1,70 +1,226 @@
 $adi-icons: (
-     "rup-semantic-trastorno": 50,
-     "rup-semantic-todos": 51,
-     "rup-semantic-producto": 52,
-     "icon-rup-semantic-plan-1": 53,
-     "rup-semantic-plan": 54,
-     "rup-semantic-hallazgo": 55,
-     "rup-semantic-dispositivo": 56,
-     "semantic-elementoderegistro": 57,
-     "alertas": 61,
-     "arbol": 62,
-     "cama": 63,
-     "cama-bloqueada": 64,
-     "cama-candado": 65,
-     "cama-check": 66,
-     "cama-femenino": 68,
-     "cama-lapiz-1": 69,
-     "cama-lapiz": 6a,
-     "cama-masculino": 6b,
-     "cama-ocupada": 6c,
-     "cama-oxigeno": 6d,
-     "cama-pausada": 6e,
-     "cama-reloj": 6f,
-     "cama-configuracion": 70,
-     "dieta": 71,
-     "documento": 72,
-     "egreso": 73,
-     "rup-calificador": 75,
-     "agendas": 76,
-     "alerta": 77,
-     "ambulancia": 78,
-     "bomberos": 79,
-     "confirmar": 7a,
-     "defensa-civil": 41,
-     "farmacia": 42,
-     "horario": 43,
-     "hospital": 44,
-     "huds": 45,
-     "laboratorio": 46,
-     "logo": 47,
-     "maltrato": 48,
-     "marker": 49,
-     "marker-salud": 4a,
-     "mpi": 4b,
-     "noticia": 4c,
-     "paciente": 4d,
-     "policia": 4f,
-     "profesional": 58,
-     "profesional-circulo": 59,
-     "telefono": 5a,
-     "turno": 30,
-     "vacuna": 31,
-     "violencia-familiar": 32,
-     "hospital-cyan": 33,
-     "calendario-dia-oscuro": 34,
-     "calendario-rango-oscuro": 35,
-     "defensa-civil-oscuro": 39,
-     "llamar-oscuro": 36,
-     "cama-reparacion": 67,
-     "andes-icon-cama-reparacion": 37,
-     "cuna": 38,
-     "cuna-bloqueada": 21,
-     "cuna-desocupada": 22,
-     "cuna-pausada-1": 23,
-     "cuna-pausada": 24,
-     "cuna-reparacion": 25,
-     "cama-desocupada": 67,
-     "paciente-circulo": 4e,
-     "evoluciones": 74,
+     "abecedario": 61,
+     "adn": 62,
+     "alarma": 63,
+     "ambulancia": 64,
+     "anciana": 65,
+     "andes": 66,
+     "anestesia": 67,
+     "auto-policia": 68,
+     "bisturi": 69,
+     "bloques-reloj": 6a,
+     "calendario": 6b,
+     "calendario-fecha-outline": 6e,
+     "calendario-flecha-abajo": 6f,
+     "calendario-flechas-circulares": 70,
+     "calendario-mas": 71,
+     "calendario-rango-bold": 72,
+     "calendario-tilde": 73,
+     "calendarios": 74,
+     "cama": 75,
+     "cama-candado": 76,
+     "cama-destendida": 77,
+     "cama-engranaje": 78,
+     "cama-herramienta": 79,
+     "cama-paciente": 7a,
+     "cama-reloj": 6c,
+     "camara-foto": 6d,
+     "camilla": 41,
+     "camion-bomberos": 42,
+     "candado": 43,
+     "celular": 44,
+     "celular-llave": 45,
+     "celular-mano": 46,
+     "celular-paciente": 47,
+     "centro-salud": 48,
+     "circulo-botella": 49,
+     "circulo-camara": 4a,
+     "circulo-hospital": 4b,
+     "circulo-madre-hijo": 4c,
+     "circulo-medico": 4d,
+     "circulo-paciente": 4e,
+     "click": 4f,
+     "clinica": 50,
+     "corazon": 51,
+     "corazon-cruz": 52,
+     "corazon-outline": 53,
+     "credencial-paciente": 54,
+     "credencial-usuario": 55,
+     "cruz": 56,
+     "cruz-hospital": 57,
+     "cuentagota": 58,
+     "cuerpo": 59,
+     "cuna-candado": 5a,
+     "cuna-destendida": 30,
+     "cuna-herramienta": 31,
+     "cuna-paciente": 32,
+     "cuna-reloj": 33,
+     "defensa-civil": 34,
+     "desvinculo": 35,
+     "diario": 36,
+     "doctora": 37,
+     "docuemento-manzana": 38,
+     "documento": 39,
+     "documento-corazon": 21,
+     "documento-cruz": 22,
+     "documento-cruz-hospital": 23,
+     "documento-lapiz": 24,
+     "documento-lupa": 25,
+     "documento-mas": 26,
+     "documento-paciente": 27,
+     "documento-reloj": 28,
+     "documento-termometro": 29,
+     "documento-tilde": 2a,
+     "documento-tubo": 2b,
+     "documentos": 2c,
+     "enfermera-outline": 2d,
+     "enfermero": 2e,
+     "entrada": 3b,
+     "enviar": 3c,
+     "escritorio": 3d,
+     "estadistica": 3f,
+     "estetoscopio": 40,
+     "exclamacion": 5e,
+     "farmacia": 60,
+     "familia": 2f,
+     "enfermero-outline-125": 3a,
+     "enfermero-outline-134": 3e,
+     "estomago": 5f,
+     "femenino": 5b,
+     "ferula": 7b,
+     "flecha-abajo": 7c,
+     "flecha-arriba": 7d,
+     "flecha-derecha": 7e,
+     "flecha-izquierda": 5c,
+     "formula": e000,
+     "frasco": e001,
+     "frasco-pastillas": e002,
+     "garganta": e003,
+     "ginecologia": e004,
+     "giro": e005,
+     "herramienta": e006,
+     "zoom-in": e007,
+     "zoom-out": e008,
+     "zoom": e009,
+     "vinculo": e00a,
+     "inhalador-52": e00b,
+     "pildora": e00c,
+     "recipiente": e00d,
+     "silencio": e00f,
+     "salida": e010,
+     "reloj": e011,
+     "paciente": e012,
+     "pastillas": e013,
+     "pastilla-79": e014,
+     "planilla-tubo": e016,
+     "planilla-pipeta": e017,
+     "planilla-electro": e018,
+     "pipeta": e019,
+     "pico-izquierda": e01a,
+     "pico-derecha": e01b,
+     "pico-arriba": e01c,
+     "pico-abajo": e01d,
+     "mano-nio": e00e,
+     "marcador": e015,
+     "marcador-salud": e01e,
+     "mas": e01f,
+     "masculino": e020,
+     "oxigeno": e021,
+     "oreja": e022,
+     "nube-subir": e023,
+     "nube-bajar": e024,
+     "nodos": e025,
+     "molecula": e026,
+     "microscopio": e027,
+     "interaccion": e028,
+     "lapiz-documento": e029,
+     "lapiz": e02a,
+     "paciente-hombre": e02c,
+     "paciente-mujer": e02d,
+     "medico": e02e,
+     "tilde": e02f,
+     "vacuna": e030,
+     "puerta-salir": e031,
+     "prohibido": e032,
+     "pregunta": e033,
+     "telefono": e034,
+     "termometro-55": e035,
+     "tablet": e036,
+     "recuperar": e037,
+     "paciente-rayos": e038,
+     "paciente-sol": e039,
+     "particulas": e03a,
+     "turno-menos": e03b,
+     "turno-mas": e03c,
+     "usuarios": e03d,
+     "usuario-tilde": e03e,
+     "usuario-mas": e03f,
+     "llamada-saliente": e040,
+     "usuario-reloj-outline": e045,
+     "usuario-tilde-outline": e046,
+     "pulmones": e043,
+     "logo-youtube": e044,
+     "logo-facebook": e047,
+     "logo-github": e048,
+     "mail": e049,
+     "paciente-casa": e04b,
+     "mano-gota": e04c,
+     "mano-herramienta": e04d,
+     "logo-github-outline": e04e,
+     "logo-facebook-outline": e04f,
+     "logo-youtube-outline": e050,
+     "logo-whatsapp": e051,
+     "logo-twitter-outline": e052,
+     "logo-twitter": e053,
+     "plasma": e05c,
+     "laboratorio": e02b,
+     "pc": e058,
+     "pie": e041,
+     "traumatologia": e042,
+     "turno-tilde": e04a,
+     "infante": e055,
+     "informacion": e056,
+     "mano": e057,
+     "mail-outline": e059,
+     "paciente-completo": e05a,
+     "hombre-corriendo": e05b,
+     "hombre-caminando": e054,
+     "turno-codigo": e05d,
+     "intestino": e05e,
+     "inhalador-80": e05f,
+     "paciente-medico": e060,
+     "interconsulta": e061,
+     "hospital": e062,
+     "historial": e063,
+     "jerarquia": e064,
+     "riones": e065,
+     "microbios": e066,
+     "resonancia": e067,
+     "calendario-fecha-abajo": e069,
+     "calendario-fecha-arriba": e06a,
+     "impresora": e06b,
+     "madre-hijo": e06c,
+     "mano-corazon": e06e,
+     "turno-bold": e071,
+     "turno-tilde-bold": e072,
+     "turno-mas-bold": e073,
+     "rayos": e075,
+     "informe-medico": e06d,
+     "web": e068,
+     "trastorno": e06f,
+     "termometro": e070,
+     "rayos-1": e074,
+     "semantics": e076,
+     "logo-ministerio": e077,
+     "logo-hpn": e078,
+     "logo-bpn": e079,
+     "medica": e07a,
+     "logo-tics": e07b,
+     "logo-ministerio-salud": e07c,
+     "esqueleto": e07d,
+     "hallazgo": e07e,
+     "etiqueta": 5d,
+     "universidad": e07f,
+     "estudiante": e080,
+     "engranaje-outline": e081,
 );
