--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,4 @@
-$adi-filename:         "andes-font";
+$adi-filename:         "andes.font";
 $adi-font-name:        "Andes Icons";
 $adi-font-family:      "andesicons";
 $adi-font-weight:      "regular";
